Fixed issue #32: Carousel cuts off message if title is too long

--- a/sites/all/themes/magazeen_lite/style.css
+++ b/sites/all/themes/magazeen_lite/style.css
@@ -4,7 +4,7 @@
   border-radius: 3px;
   *zoom: 1;
   background-color: #EFEFEF;
-  border: 1px solid #ccc;
+  border: 1px solid #cccccc;
   padding: 25px 30px; }
   #user-login:before, #node-22 .node-content:before, #user-login:after, #node-22 .node-content:after {
     display: table;
@@ -22,7 +22,7 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  border: 1px solid #ccc;
+  border: 1px solid #cccccc;
   font-size: 1.2em;
   padding: 10px 5px;
   width: 100%; }
@@ -524,7 +524,7 @@
 
   input[type="checkbox"],
   input[type="radio"] {
-    border: 1px solid #ccc; }
+    border: 1px solid #cccccc; }
 
   .form-horizontal .control-label {
     float: none;
@@ -1450,7 +1450,7 @@ div.messages {
   margin: 1em 0;
   color: #036;
   background: #bdf;
-  border: 1px solid #ace; }
+  border: 1px solid #aaccee; }
 
 div.warning {
   color: #840;
@@ -1526,7 +1526,7 @@ h1 {
 .node-content h1 {
   margin: 10px 0;
   padding: 0;
-  font: bold 2.50em Arial, Helvetica, sans-serif;
+  font: bold 2.5em Arial, Helvetica, sans-serif;
   color: #53798b; }
 
 h1 a:link, h1 a:active, h1 a:visited {
@@ -1546,7 +1546,7 @@ h2 {
 .node-content h2, .box h2, .theme-info h2 {
   margin: 10px 0;
   padding: 0;
-  font: bold 2.00em Arial, Helvetica, sans-serif;
+  font: bold 2em Arial, Helvetica, sans-serif;
   color: #53798b; }
 
 h2.slogan {
@@ -1557,13 +1557,13 @@ h2.slogan {
 h3 {
   margin: 0;
   padding: 0;
-  font: bold 2.80em Arial, Helvetica, sans-serif;
+  font: bold 2.8em Arial, Helvetica, sans-serif;
   color: #30393d; }
 
 .node-content h3, #sidebar h3 {
   margin: 10px 0;
   padding: 0;
-  font: bold 1.50em Arial, Helvetica, sans-serif;
+  font: bold 1.5em Arial, Helvetica, sans-serif;
   color: #53798b; }
 
 h3 a:link, h3 a:active, h3 a:visited {
@@ -1860,7 +1860,7 @@ img#logo-image {
 #navigation {
   background: white url(images/navigation.gif) repeat-x bottom center;
   border-top: 2px solid #393b3b;
-  border-bottom: 1px solid #FFF;
+  border-bottom: 1px solid white;
   font-size: 1.1em;
   margin: 0;
   padding: 0; }
@@ -1870,8 +1870,7 @@ img#logo-image {
   height: auto;
   list-style: none;
   margin: 0 auto;
-  padding: 0;
-  width: 880px; }
+  padding: 0; }
   @media (max-width: 767px) {
     #navigation ul.links {
       width: 100%; } }
@@ -1899,7 +1898,7 @@ img#logo-image {
   height: auto; }
   @media (max-width: 767px) {
     #navigation ul li a:link, #navigation ul li a:active, #navigation ul li a:visited {
-      border-top: 1px solid #eee;
+      border-top: 1px solid #eeeeee;
       padding: 5px;
       text-align: center; } }
 
@@ -1949,7 +1948,7 @@ a.rss:link, a.rss:active, a.rss:visited, a.rss:hover {
 
 ul.pager {
   background-color: #DCE8EE;
-  border-color: #EBF2F5 #EBF2F5 #D4E0E6;
+  border-color: #ebf2f5 #ebf2f5 #d4e0e6;
   border-style: solid;
   border-width: 1px;
   font-family: Georgia,'Times New Roman',Times,serif;
@@ -1981,7 +1980,7 @@ ul.pager {
   display: block;
   margin: 0 auto 10px;
   padding: 3px;
-  border: 1px solid #E8E8E8; }
+  border: 1px solid #e8e8e8; }
 
 .breadcrumb {
   font: 1.2em Verdana, Arial, Helvetica, sans-serif; }
@@ -1989,7 +1988,7 @@ ul.pager {
 .node-meta {
   margin: 0 0 23px 0;
   padding: 0;
-  border-bottom: 1px solid #FFF;
+  border-bottom: 1px solid white;
   position: relative; }
 
 .node-info {
@@ -2005,7 +2004,7 @@ ul.pager {
 .node-content,
 .page-content,
 .comment-content {
-  border: 1px solid #FFF;
+  border: 1px solid white;
   border-bottom: 1px solid #e8ebec;
   margin: 0;
   padding: 22px 22px 11px;
@@ -2032,7 +2031,7 @@ ul.pager {
 /* --------------- */
 .node-footer {
   background: #FCFDFE;
-  border-top: 1px solid #eee;
+  border-top: 1px solid #eeeeee;
   margin: 0;
   padding: 15px;
   position: relative;
@@ -2115,8 +2114,8 @@ ul.pager {
 
 #snavigation {
   background-color: #171615;
-  border-top: 1px solid #1E1D1D;
-  border-bottom: 1px solid #1E1D1D;
+  border-top: 1px solid #1e1d1d;
+  border-bottom: 1px solid #1e1d1d;
   clear: both;
   padding: 10px 0; }
   #snavigation li a.active {
@@ -2142,7 +2141,7 @@ ul.slinks {
 #sidebar .block h2 {
   background: url("images/sidebar-top.gif") no-repeat scroll center top #f5fbfe;
   color: #587682;
-  font: bold 2.25em Arial,Helvetica,sans-serif;
+  font: bold 2.25em Arial, Helvetica, sans-serif;
   height: 55px;
   margin: 0;
   padding: 28px 0 0 20px;
@@ -2176,9 +2175,9 @@ ul.slinks {
   border-radius: 3px;
   *zoom: 1;
   background-color: #f6fbff;
-  -webkit-box-shadow: inset 0px 0px 2px 1px #fff;
-  -moz-box-shadow: inset 0px 0px 2px 1px #fff;
-  box-shadow: inset 0px 0px 2px 1px #fff;
+  -webkit-box-shadow: inset 0px 0px 2px 1px white;
+  -moz-box-shadow: inset 0px 0px 2px 1px white;
+  box-shadow: inset 0px 0px 2px 1px white;
   margin-bottom: 20px;
   overflow: auto;
   padding: 10px; }
@@ -2212,7 +2211,7 @@ ul.slinks {
     clear: both; }
 .front-module .module-footer {
   background-color: #FCFDFE;
-  border-top: 1px solid #eee;
+  border-top: 1px solid #eeeeee;
   padding: 15px; }
   .front-module .module-footer a {
     font-style: italic !important;
@@ -2285,7 +2284,6 @@ ul.slinks {
   .carousel-frame .carousel-caption {
     background: rgba(0, 0, 0, 0.6);
     color: white;
-    height: 70px;
     padding: 5px;
     position: absolute;
     bottom: 0;
@@ -2330,7 +2328,7 @@ ul.slinks {
 
 .carousel-thumb {
   background-color: #FFF;
-  border: 1px solid #EAF1F4;
+  border: 1px solid #eaf1f4;
   float: left;
   margin: 3.125px;
   padding: 2px; }
@@ -2339,7 +2337,7 @@ ul.slinks {
 /* Columns */
 .column-container h2 {
   color: #587682;
-  font: bold 2.00em Arial, Helvetica, sans-serif;
+  font: bold 2em Arial, Helvetica, sans-serif;
   margin: 10px 0; }
 
 .column-container h4 {
@@ -2389,7 +2387,7 @@ ul.slinks {
   opacity: 1; }
 
 .caption-slide h3 {
-  font: bold 1.50em Arial, Helvetica, sans-serif; }
+  font: bold 1.5em Arial, Helvetica, sans-serif; }
 
 .ask-module {
   font-size: 1.1em;
@@ -2427,7 +2425,7 @@ a:active.more-button {
 
 #carousel-nav a {
   background-color: #FFF;
-  border: 1px solid #FFF;
+  border: 1px solid white;
   border-bottom-color: #f6fbff;
   color: #5E6568;
   display: block;
@@ -2438,7 +2436,7 @@ a:active.more-button {
 
 #carousel-nav a.current {
   background-color: #ebf6fa;
-  border: 1px solid #EAF1F4; }
+  border: 1px solid #eaf1f4; }
 
 /* ----------------------------------------------*/
 /* Ask the Sexperts webform
@@ -2503,12 +2501,12 @@ a:active.more-button {
       padding-left: 26px; }
 
 .taxonomy-nested {
-  border-bottom: 1px solid #DADADA;
+  border-bottom: 1px solid #dadada;
   margin: 0; }
 
 .taxonomy-item {
   background-color: white;
-  border-bottom: 1px solid #DADADA;
+  border-bottom: 1px solid #dadada;
   list-style: none;
   padding: 5px 7px; }
   .taxonomy-item:last-child {
@@ -2531,7 +2529,7 @@ tr.odd.cat-row td,
 tr.even.cat-row td {
   border-left: 1px solid #d0d0d0;
   border-right: 1px solid #d0d0d0;
-  border-bottom: 1px solid #DADADA;
+  border-bottom: 1px solid #dadada;
   padding: 5px 7px; }
   tr.odd.cat-row td:before,
   tr.even.cat-row td:before {
@@ -2678,7 +2676,7 @@ ul.icons {
 
 .icon-border {
   border: solid 1px #eeeeee;
-  padding: .2em .25em .15em;
+  padding: 0.2em 0.25em 0.15em;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px; }
